--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,17 @@
  */
 
 /* You can override the default Infima variables here. */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap');
+
+
+body, h1, h2, h3 {
+  font-family: 'Rubik';
+}
+
+h1, h2 {
+  font: weight 600;
+}
+
 :root {
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
