--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,11 +7,11 @@
 /* You can override the default Infima variables here. */
 
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Figtree&display=swap');
 
 /* Global Font */
 body, h1, h2, h3 {
-  font-family: 'Rubik';
+  font-family: 'Figtree';
 }
 
 h1, h2 {
